[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", 
            "pybind11", 
            "pyomo", 
            "wheel"]  # PEP 508 specifications.

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "*"
skip = ""
test-skip = ""

[tool.cibuildwheel.linux]
     archs = ["x86_64 i686 aarch64 ppc64le s390x"]
     before-all = ["cd /project && git clone https://github.com/ERGO-Code/HiGHS.git",
              "cd HiGHS/ && mkdir build && cd build",
              "cmake -DFAST_BUILD=ON -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=/project/installs/highs ..",
              "make -j && make install"]
     before-build = [
        "REPAIR_LIBRARY_PATH=/project/installs/highs/lib"
     ]

[tool.cibuildwheel.macos]
     archs = ["x86_64 arm64"]
     repair-wheel-command = [
         "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-listdeps {wheel}",
         "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"
     ]